# Malphas-backend

./: .gitignore  .gitmodules  .ninja_deps  .ninja_log  Backend.vcxproj  Backend.vcxproj.filters  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Dockerfile  README.md  build.ninja  compile_commands.json  config.cfg  gen_dao  malphas-backend.vcxproj  malphas-backend.vcxproj.filters  malphas.sln  vcpkg.json
codegen/: gen.c  gen.cpp
config/: daos.cfg  db-docker.cfg  db.cfg  malphas.cfg
docker/: docker-compose.yaml
include/: Api.hpp  Database.hpp  dao_preamble.h  ordered_map.hpp  parser.hpp  util.hpp
include/cfg/: Config.hpp
include/dao/: dao.h  dao_extras.h
include/middleware/: AuthFilter.hpp
migrations/: 1__Create_user_table.sql  2__Create_scene_table.sql  3__Create_wires_and_circuit_tables.sql  4__Add_invalidated_column.sql  5_Remove_authorization.sql  6_Remove_user_password_hash.sql  7_Add_testing_user.sql  init.sql
src/: Api.cpp  Database.cpp  Main.cpp  parser.cpp  util.cpp
src/cfg/: Config.cpp
src/middleware/: AuthFilter.cpp
